[Misc] Remove checkstyle suppressions and fix code to pass checkstyle (thanks to ChatGPT for the help - Reviewed manually)